--- a/src/components/styles/Header.css
+++ b/src/components/styles/Header.css
@@ -22,10 +22,10 @@
 
 .now {
     margin-left: 348px;
-    color: aliceblue;
     margin: 0;
     display: flex;
     justify-content: space-around;
+    font-size: 24px;
 }
 
 .buttonLogout {
